fix(styles): update primary button background color for improved visibility

--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -31,5 +31,5 @@
 
 .btn-primary:hover {
   transition: background-color 0.5s ease;
-  background-color: #1f69df;
+  background-color: #3077e9;
 }
